Project 1 minus REST API

--- a/Food Menu App/food/templates/food/item-form.html
+++ b/Food Menu App/food/templates/food/item-form.html
@@ -11,11 +11,33 @@
   </head>
   <body>
     {% block body %}
-    <form method="POST">
-      {% csrf_token %} {{ form }}
-      <button type="submit">Submit</button>
-    </form>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 offset-md-4">
+          <div class="card">
+            <div class="card-header bg-dark">
+              <div class="card-title text-white pt-2">
+                <h3>Add Item</h3>
+              </div>
+            </div>
+            <div class="card-body">
+              <form method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="form-group mt-2">
+                  {{ field.name }}
+                  <br>
+                  {{ field }}
+                </div>
+                {% endfor %}
+                <button type="submit" class="btn btn-primary mt-3">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     {% endblock %}
   </body>
 </html>
