--- a/Food Menu App/food/templates/food/base.html
+++ b/Food Menu App/food/templates/food/base.html
@@ -8,16 +8,44 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark p-2 mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 mb-3">
             <a href="#" class="navbar-brand">FoodApp</a>
-    
-            <div class="navbar">
-                <a href="{% url 'food:item' %}" class="nav-item mx-3 p-2">Home</a>
-                <a href="{% url 'food:create_item' %}" class="nav-item mx-3 p-2">Add Item</a>
-                <a href="{% url 'food:item' %}" class="nav-item mx-3 p-2">Delete Item</a>
-            </div>
+        
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item mx-2 active">
+                        <a href="{% url 'food:item' %}" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a href="{% url 'food:create_item' %}" class="nav-link">Add Item</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item mx-2">
+                        <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'profile'%}" class="nav-link">Profile</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item mx-2">
+                        <a href="{% url 'login' %}" class="nav-link">Login</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>            
         </nav>
-
+        
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block body %}
         {% endblock %}
     </body>
