--- a/Food Menu App/food/templates/food/detail.html
+++ b/Food Menu App/food/templates/food/detail.html
@@ -21,9 +21,9 @@
             </div>
 
             <div class="col-md-6">
-                <h1>{{item.item_name }}</h1>
-                <h2>{{ item.item_desc }}</h2>
-                <h3>{{ item.item_price }}</h3>
+                <h1>{{ object.item_name }}</h1>
+                <h2>{{ object.item_desc }}</h2>
+                <h5>${{ object.item_price }}</h5>
                 <a href="{% url 'food:delete_item' item.id%}" class="btn btn-danger">Delete</a>
             </div>
         </div>
