--- a/Food Menu App/food/templates/food/base.html
+++ b/Food Menu App/food/templates/food/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 mb-3">
-            <a href="#" class="navbar-brand">FoodApp</a>
+            <a href="#" class="navbar-brand">Tymo's FoodApp</a>
         
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
