--- a/Food Menu App/users/templates/users/profile.html
+++ b/Food Menu App/users/templates/users/profile.html
@@ -1,2 +1,35 @@
-<h1>{{ user.username }}</h1>
-<img src="{{ user.profile.image.url }}" class="card img-fluid" height="100px" width="100px">
+{% extends 'food/base.html'%}
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
+  <body class="bg-gray-100">
+    {% block body %}
+    <div class="container mx-auto py-8">
+      <div class="row">
+        <div class="flex justify-center">
+            <div class="max-w-xs bg-white rounded-xl shadow-md overflow-hidden">
+              <img
+                src="{{ user.profile.image.url }}"
+                class="w-48 h-48 rounded-full mx-auto mt-4"
+                width="200"
+                height="200"
+              />
+              <div class="">
+                <h1 class="text-xl font-semibold mb-2 text-capitalize">{{ user.username }}</h1>
+                <h4 class="text-gray-500">{{ user.email }}</h4>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    {% endblock %}
+  </body>
+</html>
