small change to expense

--- a/Expense Tracker/expensesite/expenseapp/templates/expenseapp/index.html
+++ b/Expense Tracker/expensesite/expenseapp/templates/expenseapp/index.html
@@ -76,7 +76,7 @@
   <!-- Displaying total -->
   <div class="px-72 py-5">
     <span class="font-bold text-green-500">
-        Total: ${{ total_expenses }}
+      Total: ${{ total_expenses.amount__sum }}
     </span>
   </div>
 
@@ -152,120 +152,118 @@
     <canvas id="myChart1" class="m-10"></canvas>
   </div>
 </div>
-{% endblock %}
-
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-  const cats = [];
-  const cat_sums = [];
+  document.addEventListener("DOMContentLoaded", function () {
+    const cats = [];
+    const cat_sums = [];
 
-  const dates = [];
-  const sums = [];
+    const dates = [];
+    const sums = [];
 
-  const catSumDiv = document
-    .getElementById("cat-sum-table")
-    .getElementsByTagName("div");
+    const catSumDiv = document
+      .getElementById("cat-sum-table")
+      .getElementsByTagName("div");
 
-  for (i = 0; i < catSumDiv.length; i++) {
-    if (i % 2 == 1) {
-      cat_sums.push(catSumDiv[i].innerText.replace("$", ""));
-    } else {
-      cats.push(catSumDiv[i].innerText);
+    for (i = 0; i < catSumDiv.length; i++) {
+      if (i % 2 == 1) {
+        cat_sums.push(catSumDiv[i].innerText.replace("$", ""));
+      } else {
+        cats.push(catSumDiv[i].innerText);
+      }
     }
-  }
 
-  const dailySumDiv = document
-    .getElementById("30-day-table")
-    .getElementsByTagName("div");
+    const dailySumDiv = document
+      .getElementById("30-day-table")
+      .getElementsByTagName("div");
 
-  for (i = 0; i < dailySumDiv.length; i++) {
-    if (i % 2 == 1) {
-      sums.push(dailySumDiv[i].innerText.replace("$", ""));
-    } else {
-      dates.push(dailySumDiv[i].innerText);
+    for (i = 0; i < dailySumDiv.length; i++) {
+      if (i % 2 == 1) {
+        sums.push(dailySumDiv[i].innerText.replace("$", ""));
+      } else {
+        dates.push(dailySumDiv[i].innerText);
+      }
     }
-  }
 
-  var ctx = document.getElementById("myChart").getContext("2d");
-  var myChart = new Chart(ctx, {
-    type: "pie",
-    data: {
-      labels: cats,
-      datasets: [
-        {
-          label: "Expense across categories",
-          data: cat_sums,
-          backgroundColor: [
-            "rgba(255, 99, 132, 0.2)",
-            "rgba(54, 162, 235, 0.2)",
-            "rgba(255, 206, 86, 0.2)",
-            "rgba(75, 192, 192, 0.2)",
-            "rgba(153, 102, 255, 0.2)",
-            "rgba(255, 159, 64, 0.2)",
-          ],
-          borderColor: [
-            "rgba(255, 99, 132, 1)",
-            "rgba(54, 162, 235, 1)",
-            "rgba(255, 206, 86, 1)",
-            "rgba(75, 192, 192, 1)",
-            "rgba(153, 102, 255, 1)",
-            "rgba(255, 159, 64, 1)",
-          ],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      scales: {
-        y: {
-          beginAtZero: true,
+    var ctx = document.getElementById("myChart").getContext("2d");
+    var myChart = new Chart(ctx, {
+      type: "pie",
+      data: {
+        labels: cats,
+        datasets: [
+          {
+            label: "Expense across categories",
+            data: cat_sums,
+            backgroundColor: [
+              "rgba(255, 99, 132, 0.2)",
+              "rgba(54, 162, 235, 0.2)",
+              "rgba(255, 206, 86, 0.2)",
+              "rgba(75, 192, 192, 0.2)",
+              "rgba(153, 102, 255, 0.2)",
+              "rgba(255, 159, 64, 0.2)",
+            ],
+            borderColor: [
+              "rgba(255, 99, 132, 1)",
+              "rgba(54, 162, 235, 1)",
+              "rgba(255, 206, 86, 1)",
+              "rgba(75, 192, 192, 1)",
+              "rgba(153, 102, 255, 1)",
+              "rgba(255, 159, 64, 1)",
+            ],
+            borderWidth: 1,
+          },
+        ],
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+          },
         },
       },
-    },
-  });
+    });
 
-  console.log(dates);
-  console.log(sums);
-  var ctx1 = document.getElementById("myChart1").getContext("2d");
-  var myChart1 = new Chart(ctx1, {
-    type: "line",
-    data: {
-      labels: dates,
-      datasets: [
-        {
-          label: "Sum of daily expenses",
-          data: sums,
-          backgroundColor: [
-            "rgba(255, 99, 132, 0.2)",
-            "rgba(54, 162, 235, 0.2)",
-            "rgba(255, 206, 86, 0.2)",
-            "rgba(75, 192, 192, 0.2)",
-            "rgba(153, 102, 255, 0.2)",
-            "rgba(255, 159, 64, 0.2)",
-          ],
-          borderColor: [
-            "rgba(255, 99, 132, 1)",
-            "rgba(54, 162, 235, 1)",
-            "rgba(255, 206, 86, 1)",
-            "rgba(75, 192, 192, 1)",
-            "rgba(153, 102, 255, 1)",
-            "rgba(255, 159, 64, 1)",
-          ],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      scales: {
-        y: {
-          beginAtZero: true,
+    console.log(dates);
+    console.log(sums);
+    var ctx1 = document.getElementById("myChart1").getContext("2d");
+    var myChart1 = new Chart(ctx1, {
+      type: "line",
+      data: {
+        labels: dates,
+        datasets: [
+          {
+            label: "Sum of daily expenses",
+            data: sums,
+            backgroundColor: [
+              "rgba(255, 99, 132, 0.2)",
+              "rgba(54, 162, 235, 0.2)",
+              "rgba(255, 206, 86, 0.2)",
+              "rgba(75, 192, 192, 0.2)",
+              "rgba(153, 102, 255, 0.2)",
+              "rgba(255, 159, 64, 0.2)",
+            ],
+            borderColor: [
+              "rgba(255, 99, 132, 1)",
+              "rgba(54, 162, 235, 1)",
+              "rgba(255, 206, 86, 1)",
+              "rgba(75, 192, 192, 1)",
+              "rgba(153, 102, 255, 1)",
+              "rgba(255, 159, 64, 1)",
+            ],
+            borderWidth: 1,
+          },
+        ],
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+          },
         },
       },
-    },
+    });
   });
-});
 </script>
-
+{% endblock %}
